@@ -14,7 +14,7 @@ export("Adobe_glyphs", "HTMLheader", "Rd2HTML", "Rd2ex", "Rd2latex",
        "getDepList", "installFoundDepends", "latexToUtf8",
        "list_files_with_exts", "list_files_with_type", "md5sum",
        "package.dependencies", "parseLatex", "parse_Rd", "pkgDepends",
-       "pkgVignettes", "pskill", "read.00Index", "readNEWS",
+       "pkgVignettes", "pskill", "pspriority", "read.00Index", "readNEWS",
        "resaveRdaFiles", "showNonASCII", "showNonASCIIfile",
        "startDynamicHelp", "testInstalledBasic",
        "testInstalledPackage", "testInstalledPackages", "texi2dvi",
